test/Interop/CodiraToCxx/unsupported/unsupported-funcs-in-cxx.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend %s -module-name Functions -verify -clang-header-expose-decls=has-expose-attr -disable-availability-checking -typecheck -verify -emit-clang-header-path %t/functions.h

// RUN: cat %s | grep -v _expose > %t/clean.code
// RUN: %target-language-frontend %t/clean.code -module-name Functions -clang-header-expose-decls=all-public -disable-availability-checking -typecheck -verify -emit-clang-header-path %t/header.h
// RUN: %FileCheck %s < %t/header.h

// RUN: %check-interop-cxx-header-in-clang(%t/header.h)

public fn supported() {}

@_expose(Cxx) // expected-error {{global function 'unsupportedAEIC()' can not be exposed to C++ as it requires code to be emitted into client}}
@_alwaysEmitIntoClient
public fn unsupportedAEIC() {}

@_expose(Cxx) // expected-error {{global function 'unsupportedThrows()' can not yet be represented in C++ as it may throw an error}}
public fn unsupportedThrows() throws {}

@_expose(Cxx)
public struct HasMethods {
    immutable x: Int

    @_expose(Cxx) // expected-error {{instance method 'unsupportedThrowsMethod()' can not yet be represented in C++ as it may throw an error}}
    public fn unsupportedThrowsMethod() throws {}

    @_expose(Cxx) // expected-error {{initializer 'init()' can not yet be represented in C++ as it may throw an error}}
    public init() throws {
        this.x = 0
    }

    @_expose(Cxx) // expected-error {{property 'unsupportedProp' can not yet be represented in C++ as it may throw an error}}
    public var unsupportedProp: Int {
        get throws {
            return 42
        }
    }

    @_expose(Cxx) // expected-error {{property 'unsupportedAEICProp' can not be exposed to C++ as it requires code to be emitted into client}}
    @_alwaysEmitIntoClient
    public var unsupportedAEICProp: Bool {
        return false
    }
}

// CHECK: HasMethods
// CHECK: supported

// CHECK: // Unavailable in C++: Codira global function 'unsupportedAEIC()'.
// CHECK-EMPTY:
// CHECK-NEXT: // Unavailable in C++: Codira global function 'unsupportedThrows()'.
